--- a/src/shared/astro/Image.astro
+++ b/src/shared/astro/Image.astro
@@ -5,58 +5,65 @@ import { Image as AstroImage } from "astro:assets";
 type CssAlignment = "top" | "bottom" | "center" | "left" | "right";
 export type CssAlign = `${CssAlignment} ${CssAlignment}` | CssAlignment;
 
-interface Props {
-    image: string | any;
-    width?: number;
-    height?: number;
-    fit?: "cover" | "contain";
-    align?: CssAlign;
-    alt?: string;
-    // aspect?: number;
-    classes?: string;
-    background?: boolean;
-    opacity?: number;
-    quality?: "low" | "mid" | "high" | "max" | number;
-    fixed?: boolean;
-    placeholder?: boolean;
-    densities?: number[] | null;
+export interface Props {
+  image: Parameters<typeof AstroImage>[0]["src"];
+  width?: number;
+  height?: number;
+  fit?: "cover" | "contain";
+  align?: CssAlign;
+  alt?: string;
+  // aspect?: number;
+  classes?: string;
+  background?: boolean;
+  opacity?: number;
+  quality?: "low" | "mid" | "high" | "max" | number;
+  fixed?: boolean;
+  placeholder?: boolean;
+  densities?: number[] | null;
 }
 
 const {
-    classes,
-    background,
-    fit = "cover",
-    quality = "high",
-    opacity,
-    fixed = false,
+  classes,
+  background,
+  fit = "cover",
+  quality = "high",
+  opacity,
+  fixed = false,
+  alt = "",
 } = Astro.props;
 
-const alt = Astro.props.alt ?? "";
-
-let astroImage;
-let placeholder = Astro.props.placeholder ?? true;
-const plSize = 16;
+// await and unwrap image
+let _image = ((i) => (typeof i === "object" && "default" in i ? i.default : i))(
+  await Astro.props.image,
+);
+let image: typeof _image;
+let densities = Astro.props.densities;
 let remote = false;
 let width, height;
 
-if (!Astro.props.image) console.warn(`Image is undefined on page ${Astro.url.toString()}`);
+if (!_image) console.warn(`Image is undefined on page ${Astro.url.toString()}`);
 
-if (typeof Astro.props.image == "string" && /^https?:\/\/.*/.test(Astro.props.image)) {
+// Image is remote
+if (typeof _image == "string" && /^https?:\/\/.*/.test(_image)) {
   remote = true;
-  placeholder = false;
 
-  const remoteSize = await inferRemoteSize(Astro.props.image).catch(
-    (e) => {
-      console.warn(e);
-      return {width: undefined, height: undefined};
-    }
-  );
+  const remoteSize = await inferRemoteSize(_image).catch((e) => {
+    console.warn(e);
+    return { width: undefined, height: undefined };
+  });
 
   width ??= remoteSize.width;
   height ??= remoteSize.height;
+  image = _image;
 }
 
-if (typeof Astro.props.image == "string" && !remote) {
+// Image is an SVG - Disable generating densities
+if (/\.svg(?:\?.*)?$/.test(typeof _image === "string" ? _image : _image.src)) {
+  densities = null;
+}
+
+// Image is local
+if (typeof _image == "string" && !remote) {
   const images = import.meta.glob([
     // Assets
     "/src/assets/**/*.svg",
@@ -79,157 +86,116 @@ if (typeof Astro.props.image == "string" && !remote) {
   ]);
 
   let imagePaths: (keyof typeof images)[] = Object.keys(images).filter((i) =>
-      i.endsWith(Astro.props.image),
+    i.endsWith(_image),
   );
 
   if (imagePaths.length > 1) {
-      console.warn(`Ambiguous image import ${Astro.props.image} -?-> ${imagePaths}!`);
+    console.warn(`Ambiguous image import ${_image} -?-> ${imagePaths}!`);
   }
 
   let imagePath = imagePaths[0];
 
   if (imagePath in images) {
-      astroImage = ((await images[imagePath]()) as any)?.default;
+    image = ((await images[imagePath]()) as any)?.default;
   } else {
-      console.warn(
-          `[Missing Image] ${Astro.props.image} was requested but is missing.`,
-      );
-      placeholder = false;
+    console.warn(`[Missing Image] ${_image} was requested but is missing.`);
+    // placeholder = false;
   }
 }
 
-const image = astroImage ?? Astro.props.image;
+image ??= _image;
+// const image = astroImage ?? _image;
 
-if (image?.width && image?.height) {
-    let aspect = image.width / image.height;
+if (typeof image !== "string" && image?.width && image?.height) {
+  let aspect = image.width / image.height;
 
-    if (Astro.props.width != undefined) {
-        width = Astro.props.width;
-        height = Math.floor(width / aspect);
-    } else if (Astro.props.height != undefined) {
-        height = Astro.props.height;
-        width = Math.floor(height * aspect);
-    } else {
-        width = image.width;
-        height = image.height;
-    }
-} else {
-    // width ??= Astro.props.width ?? 256;
-    // height ??= Astro.props.height ?? 256;
-    // densities = null;
-    // aspect = width / height;
+  if (Astro.props.width != undefined) {
+    width = Astro.props.width;
+    height = Math.floor(width / aspect);
+  } else if (Astro.props.height != undefined) {
+    height = Astro.props.height;
+    width = Math.floor(height * aspect);
+  } else {
+    width = image.width;
+    height = image.height;
+  }
 }
-const density = 1 / (Math.max(width, height) / 1920);
-const densities = Astro.props.densities ?? [+density.toFixed(2), +(density/2).toFixed(2)];
+// else if (image?.width !== image?.height) {
+
+if (densities === undefined && width && height) {
+  const density = 1 / (Math.max(width, height) / 1920);
+  densities = Astro.props.densities ?? [
+    +density.toFixed(2),
+    +(density / 2).toFixed(2),
+  ];
+}
 
 const style = {
-    "--align": Astro.props.align ?? "center",
-    "--opacity": opacity,
+  "--align": Astro.props.align ?? "center",
+  "--opacity": opacity,
 };
-
-const file = image?.src || image;
-let plData;
-
-// @ts-expect-error
-if (!ENV_BOOKSHOP_LIVE && placeholder) {
-    const fs = await import("node:fs/promises");
-    const Sharp = (await import("sharp")).default;
-
-    try {
-        let realFile = file.replace(/^(?:\/@fs)?(.*?)(?:\?.*)?$/, "$1");
-        let f;
-
-        try {
-            f = await fs.readFile(realFile);
-        } catch (err) {
-            // Also try sourcing from the public directory
-            realFile =
-                "public" + (realFile.startsWith("/") ? "" : "/") + realFile;
-            f = await fs.readFile(realFile);
-        }
-
-        let sh = Sharp(f);
-        // metadata = await sh.metadata();
-        // const { isOpaque, channels } = await sh.stats(); // Don't generate placeholders for images with alpha
-
-        plData = await sh.stats().then(({ isOpaque, channels }) => {
-            // Include PNGs which are mostly opaque but not entirely
-            if (isOpaque || channels[3].mean >= 254) {
-                return (
-                    sh
-                        .removeAlpha()
-                        .resize(plSize, null, { fit: "inside" })
-                        // .blur()
-                        .webp({quality: 10})
-                        .toBuffer()
-                        .then((b) => b.toString("base64"))
-                );
-            }
-        });
-    } catch (err) {
-        // console.warn("While generating a placeholder an error occurred:", err);
-    }
-}
-
-let placeholderStyle;
-if (placeholder && plData) {
-    let webpString = `data:image/webp;base64,${plData}`;
-    let placeholderString = `data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='${width}' height='${height}'%3e%3cimage width='100%25' height='100%25' preserveAspectRatio='xMidYMid slice' style='filter:blur(10px);' href='${webpString}'/%3e%3c/svg%3e`;
-    placeholderStyle = {
-        "background-image": `url("${placeholderString}")`,
-    };
-}
 
 let fallbackImage: string | undefined;
 
-if (typeof image == "string" && !remote) {
-  fallbackImage = image.replace(/^public/, "");
+if (typeof image === "string" && !remote) {
+  fallbackImage = image.replace(/^\/?public\/?/, "/");
 }
 ---
 
-{fallbackImage ?
-  <img src={fallbackImage} class:list={[classes, { background, fixed }]} {style} data-fit={fit} {alt} />
-  :
-  !!image && <AstroImage
-      src={image}
-      {alt}
-      {width}
-      {height}
+{
+  fallbackImage ? (
+    <img
+      src={fallbackImage}
       class:list={[classes, { background, fixed }]}
-      style={Object.assign({}, placeholderStyle, style)}
-      densities={densities ?? undefined}
+      {style}
       data-fit={fit}
-      inferSize={!remote}
-      {quality}
-  />
+      {alt}
+    />
+  ) : (
+    typeof image !== "undefined" && (
+      // @ts-ignore
+      <AstroImage
+        src={image}
+        {alt}
+        {width}
+        {height}
+        class:list={[classes, { background, fixed }]}
+        {style}
+        densities={densities ?? undefined}
+        data-fit={fit}
+        inferSize={!remote}
+        {quality}
+      />
+    )
+  )
 }
 
 <style>
-    img {
-        object-fit: cover;
-        object-position: var(--align);
-        background-size: cover;
-        background-position: var(--align);
-        width: 100%;
-        height: 100%;
-        opacity: var(--opacity, 1);
-        /* width: auto;
+  img {
+    object-fit: cover;
+    object-position: var(--align);
+    background-size: cover;
+    background-position: var(--align);
+    width: 100%;
+    height: 100%;
+    opacity: var(--opacity, 1);
+    /* width: auto;
         height: auto; */
-    }
+  }
 
-    img[data-fit="contain"] {
-        object-fit: contain;
-        background-size: contain;
-    }
+  img[data-fit="contain"] {
+    object-fit: contain;
+    background-size: contain;
+  }
 
-    img.background {
-        position: absolute;
-        height: 100%;
-        inset: 0;
-    }
+  img.background {
+    position: absolute;
+    height: 100%;
+    inset: 0;
+  }
 
-    img.fixed {
-        position: fixed;
-        inset: 0;
-    }
+  img.fixed {
+    position: fixed;
+    inset: 0;
+  }
 </style>
