--- a/src/shared/astro/Image.astro
+++ b/src/shared/astro/Image.astro
@@ -19,7 +19,8 @@ export interface Props {
   quality?: "low" | "mid" | "high" | "max" | number;
   fixed?: boolean;
   placeholder?: boolean;
-  densities?: number[] | null;
+  // densities?: number[] | null;
+  widths?: number[] | null;
 }
 
 const {
@@ -32,12 +33,15 @@ const {
   alt = "",
 } = Astro.props;
 
+
 // await and unwrap image
 let _image = ((i) => (typeof i === "object" && "default" in i ? i.default : i))(
   await Astro.props.image,
 );
 let image: typeof _image;
-let densities = Astro.props.densities;
+// let densities = Astro.props.densities;
+let widths = Astro.props.widths;
+let sizes: string;
 let remote = false;
 let width, height;
 
@@ -57,9 +61,9 @@ if (typeof _image == "string" && /^https?:\/\/.*/.test(_image)) {
   image = _image;
 }
 
-// Image is an SVG - Disable generating densities
+// Image is an SVG - Disable generating widths
 if (/\.svg(?:\?.*)?$/.test(typeof _image === "string" ? _image : _image.src)) {
-  densities = null;
+  widths = null;
 }
 
 // Image is local
@@ -104,7 +108,6 @@ if (typeof _image == "string" && !remote) {
 }
 
 image ??= _image;
-// const image = astroImage ?? _image;
 
 if (typeof image !== "string" && image?.width && image?.height) {
   let aspect = image.width / image.height;
@@ -122,13 +125,36 @@ if (typeof image !== "string" && image?.width && image?.height) {
 }
 // else if (image?.width !== image?.height) {
 
-if (densities === undefined && width && height) {
-  const density = 1 / (Math.max(width, height) / 1920);
-  densities = Astro.props.densities ?? [
-    +density.toFixed(2),
-    +(density / 2).toFixed(2),
-  ];
+// Automatically generate two image widths unless disabled (widths === null || widths)
+if (widths === undefined && width && height) {
+  let w = Math.min(1920, width)
+  widths = [w, w / 2, w / 4];
 }
+
+
+// Generate sizes
+if (widths) {
+  // sizes = [];
+
+  const _sizes = widths.toSorted((a,b) => b-a).reduce<string[]>((a, c, i, o) => {
+    if (a.length)
+    a.push(`(max-width: ${o[i-1]}px) ${c}px`);
+    else
+    a.push(`${c}px`);
+
+    return a;
+  },[]);
+
+  _sizes.push("auto");
+  _sizes.reverse();
+  sizes = _sizes.join(",\n");
+}
+
+// (max-width: 360px) 240px,
+// (max-width: 720px) 540px,
+// (max-width: 1600px) 720px,
+// 1600px
+
 
 const style = {
   "--align": Astro.props.align ?? "center",
@@ -161,9 +187,9 @@ if (typeof image === "string" && !remote) {
         {height}
         class:list={[classes, { background, fixed }]}
         {style}
-        densities={densities ?? undefined}
+        widths={widths ?? undefined}
+        sizes={sizes ?? undefined}
         data-fit={fit}
-        inferSize={!remote}
         {quality}
       />
     )
