fix: remove unused densities prop

--- a/src/components/gallery/gallery.astro
+++ b/src/components/gallery/gallery.astro
@@ -60,9 +60,8 @@ const id = `gallery-${key}`;
                         image={asset.image}
                         alt={asset.alt}
                         {fit}
-                        width={1920 / columns}
+                        widths={[1920 / columns]}
                         quality="low"
-                        densities={null}
                         placeholder={true}
                     />
 
@@ -95,7 +94,6 @@ const id = `gallery-${key}`;
                                 fit="contain"
                                 width={1920}
                                 quality="high"
-                                densities={null}
                             />
 
                             {(asset.title || asset.description) && (
