--- a/src/components/card-index/card.astro
+++ b/src/components/card-index/card.astro
@@ -60,7 +60,7 @@ function formatDate(date: Date) {
     {
         thumbnail && (
             <div class="card-thumbnail">
-                <Image image={thumbnail} width={512} densities={null} quality={"mid"} />
+              <Image image={thumbnail} width={512} quality={"mid"} />
             </div>
         )
     }
