fix(accordion): stop overlapping floating images in editor

--- a/src/components/accordion/accordion.astro
+++ b/src/components/accordion/accordion.astro
@@ -129,6 +129,7 @@ const {title} = Astro.props;
     .cms-editor-active accordion {
         display: block;
         padding-bottom: 2rem;
+        clear: both;
 
         &::before {
             content: "▼ " attr(title);
