--- a/src/components/image/asideImage.astro
+++ b/src/components/image/asideImage.astro
@@ -134,11 +134,11 @@ const imgSize = size ?? _classes.find((c) => c === "small" || c === "medium" || 
     }
 
     &[align="left"] {
-      margin: 0 2rem 2rem 0;
+      margin: 0.5em 4rem 4rem 0;
       float: left;
     }
     &[align="right"] {
-      margin: 0 0 2rem 2rem;
+      margin: 0.5em 0 4rem 4rem;
       float: right;
     }
 
