fix(asideImage): default editor style to unfloated

--- a/src/components/image/asideImage.astro
+++ b/src/components/image/asideImage.astro
@@ -127,6 +127,7 @@ const imgSize = size ?? _classes.find((c) => c === "small" || c === "medium" || 
   .cms-editor-active .richtext > .component-wrapper img {
     max-height: 30rem;
     margin: 3rem 0;
+    float: none;
     object-fit: contain;
 
     &:not(.align-left, .align-right) {
