feat: restructure page to allow section backgrounds to fill page margin

--- a/src/components/layout/slider/slider.astro
+++ b/src/components/layout/slider/slider.astro
@@ -378,7 +378,7 @@ const dataGlideOptions = Object.entries(glideOptions).reduce(
         .glide__slides {
             transform: translate3d(0, 0, 0) !important;
             width: unset !important;
-            max-width: var(--page-max-width);
+            /* max-width: var(--page-max-width); */
         }
 
         .slider-item:first-child {
