--- a/src/shared/astro/Header.astro
+++ b/src/shared/astro/Header.astro
@@ -64,7 +64,7 @@ const { id, currentPath } = Astro.props;
         left: 0;
         right: 0;
         top: 0;
-        padding: 0 calc((100vw - var(--page-max-width)) * 0.5);
+        padding: 0 var(--page-max-width-padding);
     }
 
     header.pinned.contain {
