--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,7 @@
 
 :where(:root) {
   --page-max-width: 1920px;
+  --page-max-width-padding: calc(max(100vw - var(--page-max-width), 0vw) * 0.5);
 
   --root-indent: min(8vw, calc(var(--page-max-width) * 0.08));
   --indent: var(--root-indent);
@@ -58,16 +59,10 @@
 }
 
 html {
-  height: 100%;
-  width: 100%;
-  max-height: 100%;
   font-size: 62.5%;
   overflow-x: hidden;
   font-family: var(--default-font-family);
-  display: grid;
-  grid-template-columns: 1fr min(var(--page-max-width), 100vw) 1fr;
   scroll-behavior: smooth;
-  background-color: rgb(var(--page-background-color));
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
@@ -83,18 +78,19 @@ html {
 }
 
 article {
-  box-shadow: 0 0 10rem rgb(var(--page-background-shadow));
   background-color: rgb(var(--article-background-color));
 }
 
 body {
-  max-width: var(--page-max-width);
   position: relative;
-  grid-column: 2 / 3;
 }
 
-:is(main, article) > section {
+:is(main, article) > section:not(.slider, .image) {
   padding: calc(var(--indent) * var(--vertical-indent)) var(--indent);
+
+  > .component-wrapper {
+    margin: 0 var(--page-max-width-padding);
+  }
 }
 
 [data-component="columns"] {
