fix: remove dev flag

--- a/src/shared/astro/Markdown.astro
+++ b/src/shared/astro/Markdown.astro
@@ -36,7 +36,7 @@ var substitutions = {
 var md: string | undefined;
 
 // @ts-ignore
-if (ENV_BOOKSHOP_LIVE || true) {
+if (ENV_BOOKSHOP_LIVE) {
   marked.use(gfmHeadingId());
   md = await marked.parse(content);
 } else {
