--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -3,10 +3,7 @@ import Page from "@shared/Page.astro";
 import Layout from "./Layout.astro";
 
 type Props = {
-  frontmatter: {
-    title: string;
-    content_blocks: Array<Record<string, any>>;
-  };
+  frontmatter: any;
   id?: string;
   currentPath?: string;
 };
@@ -16,9 +13,8 @@ if (!Astro.props.frontmatter) {
 }
 const props = Astro.props.frontmatter;
 const { id, currentPath } = Astro.props;
-// const _livetest = await getCollection("pages");
 ---
 
 <Layout {...props} {id} {currentPath}>
-  <Page bookshop:live contentBlocks={props.content_blocks} />
+  <Page bookshop:live contentBlocks={props.content_blocks} _frontmatter={props} />
 </Layout>
